--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>CloudSchedule by gabrielferreira</title>
+    <title>CloudSchedule by <a href="http://gabrielferreira.com">gabrielferreira</a></title>
   </head>
 
   <body>
